--- a/Bestie/Info.plist
+++ b/Bestie/Info.plist
@@ -50,5 +50,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Bariol_Bold.ttf</string>
+		<string>Bariol_Regular.ttf</string>
+	</array>
 </dict>
 </plist>
