added release and debug configs

--- a/Bestie/Info.plist
+++ b/Bestie/Info.plist
@@ -55,5 +55,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>ParseApplicationID</key>
+	<string>${PARSE_APPLICATION_ID}</string>
+	<key>ParseClientKey</key>
+	<string>${PARSE_CLIENT_KEY}</string>
+	<key>MixpanelToken</key>
+	<string>${MIXPANEL_TOKEN}</string>
 </dict>
 </plist>
