small fixes to card logic

--- a/Bestie/Debug.xcconfig
+++ b/Bestie/Debug.xcconfig
@@ -8,5 +8,6 @@
 
 PARSE_APPLICATION_ID = q1NZZSGYNxaYIQq5dDNkMlD407fmm2Hq6BoXBzu4
 PARSE_CLIENT_KEY = aA6IKoTDyboREj5gNfWQ2PasrmaaRYtMTUlugje0
+PARSE_PROJECT = debug
 
 MIXPANEL_TOKEN = ae9f71c91262dc1c018c2b75aa5af8c3
