--- a/Bestie/Release.xcconfig
+++ b/Bestie/Release.xcconfig
@@ -8,5 +8,6 @@
 
 PARSE_APPLICATION_ID = 2umHhGkMh7Gm6dU8rRVgHSPzbW5xOymXzenDx2XC
 PARSE_CLIENT_KEY = hs2lKU3eqPPRzzqNVriWyEiUyuXu9OCiv4lw3SCw
+PARSE_PROJECT = release
 
 MIXPANEL_TOKEN = 00301a443b72f402d307c4ca9c8c22fe
